Add lazy loading. Fix timezone

--- a/bin/templates/agenda/calendar.hbs
+++ b/bin/templates/agenda/calendar.hbs
@@ -65,7 +65,7 @@ li {
 	{{#each this}}
 		<li>
             {{#if (eq track 'Organization')}}<br/>{{/if}}
-			<a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text={{title}}&details={{track}}{{#if (ne session '')}} - {{session}}++{{/if}}{{excerpt}}{{#if (gt numSpeakers 0)}}++Speakers:+{{listSpeakers speakers}}{{/if}}&ctz=Europe/Naples&location={{location}}&dates={{calendar date start end}}">{{title}}</a>
+			<a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text={{title}}&details={{track}}{{#if (ne session '')}} - {{session}}++{{/if}}{{excerpt}}{{#if (gt numSpeakers 0)}}++Speakers:+{{listSpeakers speakers}}{{/if}}&ctz=Africa/Casablanca&location={{location}}&dates={{calendar date start end}}">{{title}}</a>
             {{#if (ne track 'Organization')}} - {{track}}{{#if (ne session '')}} - {{session}}{{/if}}{{/if}}
 			<div class="date-time">
 	            <span class="separator-dot"></span>
