--- a/directories/people/speakers/style.css
+++ b/directories/people/speakers/style.css
@@ -1014,12 +1014,12 @@
 
     .f-cat h6 {
         font-size: 20px;
-        padding-bottom: 10px;
+        /* padding-bottom: 10px; */
     }
 
     .f-cat h4 {
         font-size: 16px;
-        padding-bottom: 12px;
+        /* padding-bottom: 12px; */
     }
 
     .f-cat h5 {
