Remove dead links

--- a/bin/templates/impact-stories/card.hbs
+++ b/bin/templates/impact-stories/card.hbs
@@ -24,14 +24,18 @@
             </div>
         {{/if}}
         <div class="icons">
+            {{#if (ne medium '')}}
             <a class="cat-info" target="_blank" href="{{medium}}">
                 <!--span class="material-symbols-outlined">description</span-->
                 Medium
             </a>
+            {{/if}}
+            {{#if (ne pdfUrl 'https://www.fiware.org/wp-content/uploads')}}
             <a class="cat-info" target="_blank" href="{{pdfUrl}}">
                 <!--span class="material-symbols-outlined">description</span-->
                 PDF
             </a>
+            {{/if}}
             <img src='{{flagUrl}}' alt='{{language}}' class='flag' {{#if (gt @index 9)}}loading="lazy"{{/if}} />
         </div>
     </div>
