impact-stories latest.hbs update

--- a/bin/templates/impact-stories/latest.hbs
+++ b/bin/templates/impact-stories/latest.hbs
@@ -35,7 +35,7 @@
             <div class="cover-cta">
                 <a id="is-blogpost" class="details"
                     href="{{website}}"
-                    target="_blank" rel="noopener"><span class="material-symbols-outlined">description</span>Read</a>
+                    rel="noopener"><span class="material-symbols-outlined">description</span>Read</a>
                 {{#if (ne pdfUrl 'https://www.fiware.org/wp-content/uploads')}}
                 <a id="is-pdf" class="details"
                     href="{{pdfUrl}}" target="_blank"
