--- a/directories/agenda/style.css
+++ b/directories/agenda/style.css
@@ -575,26 +575,29 @@
 
 .tingle-modal {
     backdrop-filter: blur(5px);
-    user-select: none;
+    background: rgba(239, 119, 83, .8);
 }
 
 .tingle-modal--visible {
-    z-index: 99999;
+    z-index: 999999;
 }
 
 .tingle-modal__close {
-    color: #fff;
+    color: #000;
 }
 
 .tingle-modal-box {
-    border-radius: 10px;
-    background: #8ad2dc;
+    border-radius: 4px;
+    background: #fff;
     width: 640px;
+}
+
+.tingle-modal-box__content {
+    padding: 3rem 3rem 2rem;
 }
 
 .info-modal {
     display: flex;
-    align-items: center;
     margin-bottom: 20px;
 }
 
@@ -605,7 +608,7 @@
   background-color: #00D7A6; */
 }
 
-.tingle-modal img {
+.tingle-modal img.headshot {
     vertical-align: middle;
     width: 120px;
     height: 120px;
@@ -616,10 +619,17 @@
 
 .tingle-modal p {
     color: #000;
-    line-height: 1.5em;
+    line-height: 1.4em;
+}
+
+.tingle-modal a {
+    color: #000;
+    text-decoration: underline;
+    font-size: .9em;
 }
 
 .tingle-modal h1 {
+    color: #000;
     font-weight: 600;
     padding-bottom: 15px;
     border-bottom: 2px solid #000;
@@ -629,7 +639,8 @@
 
 .tingle-modal h2 {
     font-weight: 500;
-    font-size: 1.15em;
+    font-size: 1.1em;
+    line-height: 1.2em;
 }
 
 .tingle-modal h3 {
@@ -638,19 +649,19 @@
     font-weight: 500;
 }
 
-.tingle-modal .company-link {
-    font-size: 16px;
-    line-height: 1.5em;
-    color: #000;
+.company {
+    font-size: 0.7em;
+    line-height: 1em;
+    color: #000 !important;
+    cursor: pointer;
+}
+
+.company:hover {
+    color: #000 !important;
     text-decoration: underline;
 }
 
-.tingle-modal .company-link:hover {
-    color: #000;
-    text-decoration: underline;
-}
-
-/* .tingle-modal .company-link:after {
+/* .company:after {
     font-family: "ETmodules";
     font-weight: 400;
     content: "\e02c";
@@ -671,27 +682,33 @@
 
 .details-modal {
     margin-top: 20px;
+    align-items: center;
+    gap: 10px;
 }
 
 .social-modal {
-    margin-right: 10px;
+    display: flex;
+    gap: 10px;
 }
 
-.social-modal p.domain {
-    display: none;
-    /* background-color: #E37B6B;
-  border-radius: 16px;
-  padding: 5px 15px;
-  font-size: .9em;
-  margin-right:0px; */
+.tags-modal p.domain {
+    font-size: 14px;
+    font-weight: 500;
+    color: #5dc0cf;
+    background-color: #e5f5f7;
+    position: relative;
+    border-radius: 20px;
+    overflow: hidden;
+    padding: 4px 12px;
+    display: inline-block;
+    height: 28px;
 }
 
 .tags-modal p.location {
-    display: none;
-    /* display: flex;
+    display: flex;
     font-size: .9em;
     flex-direction: row;
-    padding-top: 5px; */
+    padding-top: 5px;
 }
 
 .tags-modal .location:before {
@@ -705,56 +722,91 @@
     margin-right: 3px;
 }
 
-.twitter-link::before {
+/* .twitter-link::before {
     font-family: "ETmodules";
     font-weight: 400;
     content: "\e094";
-    font-size: 16px;
+    font-size: 18px;
     display: inline-block;
     position: relative;
-    /* background: #00aced; */
-    border: solid 1px #000;
+    background: #00aced;
+    border-radius: 40px;
+    width: 32px;
+    height: 32px;
+    color: #fff;
+    text-align: center;
+    padding-left: 1px;
+    padding-top: 4px;
+} */
+
+.twitter-link {
+    font-weight: 400;
+    font-size: 20px;
+    display: inline-block;
+    position: relative;
+    background-color: rgba(0,0,0,0.1);
+    background-image: url(https://www.fiware.org/custom/icons/black/twitter.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 50%;
     border-radius: 40px;
     width: 32px;
     height: 32px;
     color: #000;
     text-align: center;
-    padding-left: 1px;
-    padding-top: 5px;
+    padding: 2px;
+    transition: all 0.3s ease-in-out;
 }
 
-.twitter-link {
-    position: relative;
-    width: 32px;
-    margin-right: 12px;
+.twitter-link:hover {
+    background-color: #000;
+    background-image: url(https://www.fiware.org/custom/icons/orange/twitter.svg);
 }
 
-.linkedin-link::before {
+/* .linkedin-link::before {
     font-family: "ETmodules";
     font-weight: 400;
     content: "\e09d";
-    font-size: 16px;
+    font-size: 17px;
     display: inline-block;
     position: relative;
-    /* background: #007bb6; */
-    border: solid 1px #000;
+    background: #007bb6;
+    border-radius: 40px;
+    width: 32px;
+    height: 32px;
+    margin-right: 0;
+    color: #fff;
+    text-align: center;
+    padding-right: 0px;
+    padding-top: 4px;
+} */
+
+.linkedin-link {
+    font-weight: 400;
+    font-size: 20px;
+    display: inline-block;
+    position: relative;
+    background-color: rgba(0,0,0,0.1);
+    background-image: url(https://www.fiware.org/custom/icons/black/linkedin.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 45%;
     border-radius: 40px;
     width: 32px;
     height: 32px;
     color: #000;
     text-align: center;
-    padding-right: 0px;
-    padding-top: 4px;
+    padding: 2px;
+    transition: all 0.3s ease-in-out;
 }
 
-.linkedin-link {
-    position: relative;
-    width: 32px;
-    margin-right: 12px;
+.linkedin-link:hover {
+    background-color: #000;
+    background-image: url(https://www.fiware.org/custom/icons/orange/linkedin.svg);
 }
 
 .tingle-modal .bio-modal p {
-    max-height: 110px;
+    max-height: 100px;
     overflow: auto;
 }
 
@@ -769,7 +821,7 @@
 }
 
 .tingle-modal .bio-modal p::-webkit-scrollbar-thumb {
-    background-color: #005FB9;
+    background-color: #ebebeb;
     /* color of the scroll thumb */
     border-radius: 20px;
     /* roundness of the scroll thumb */
@@ -780,7 +832,7 @@
 .tingle-modal .bio-modal p {
     scrollbar-width: thin;
     /* "auto" or "thin" */
-    scrollbar-color: #c7e9ee transparent;
+    scrollbar-color: #ebebeb transparent;
     /* scroll thumb and track */
 }
 
@@ -831,7 +883,7 @@
 }
 
 .event-label {
-    color: #ffffff;
+    color: #000;
     font-size: 16px;
     line-height: 1em;
 }
@@ -841,11 +893,11 @@
     align-items: center;
     gap: 10px;
     font-size: 16px;
-    color: #ffffff;
+    color: #000;
     margin: 25px 0px 15px;
     padding: 10px 0;
-    border-top: 1px solid #8ad2dc;
-    border-bottom: 1px solid #8ad2dc;
+    border-top: 1px solid #000;
+    border-bottom: 1px solid #000;
     user-select: none;
 }
 
@@ -854,7 +906,7 @@
 }
 
 .event-count {
-    color: #8ad2dc;
+    color: #000;
     font-size: 20px;
     font-weight: 600;
 }
@@ -875,18 +927,23 @@
 .filter-by {
     font-size: 16px;
     font-weight: 500;
-    color: #ffffff;
+    color: #000;
     width: 100%;
 }
 
 /* Custom select */
 
+.dropdown-container .filter-element {
+    max-width: 250px;
+}
+
 select {
     -webkit-appearance: none !important;
     -moz-appearance: none !important;
-    background-color: #fafafa;
-    background-image: url(https://www.fiware.org/fiware-summit/naples-2024/assets/icons/ico_chevron_bottom.png);
-    background-position: 100%;
+    background-color: rgba(255,255,255,0);
+    background-image: url(https://www.fiware.org/fiware-summit/rabat-2025/assets/images/ico/arrow-down.svg);
+    background-position: 97%;
+    background-size: 24px;
     background-repeat: no-repeat;
 }
 
@@ -895,23 +952,22 @@ select::-ms-expand {
 }
 
 .filter-element select {
-    background-color: #005FB9;
+    background-color: rgba(0,0,0,0);
     border-radius: 30px;
-    border: 1px solid #8ad2dc;
-    color: #fff;
+    border: 1px solid #000;
+    color: #000;
     cursor: pointer;
     font-weight: 500;
     padding: 8px 16px;
     font-size: 15px;
     width: 100%;
-    margin: 12px 0;
+    margin: 5px 0 10px 0;
 }
 
 .filter-element select:active,
 .filter-element select:focus {
-    background-color: #5dc0cf;
-    border: 1px solid #5dc0cf;
-    color: #005FB9;
+    border: 1px solid #000;
+    color: #000;
     box-shadow: none;
 }
 
@@ -924,37 +980,35 @@ select::-ms-expand {
 .filter-element button {
     display: flex;
     align-items: center;
-    background: none;
-    border: none;
+    background: rgba(0,0,0,0);
+    border: 1px solid #000;
+    color: #000;
     padding: 4px 10px;
     font-size: 15px;
     border-radius: 30px;
     transition: all 0.3s ease-in-out;
 }
 
-.filter-element button:hover {
-    background: #d2eef1;
-}
-
+.filter-element button:hover,
 .filter-element button.active {
-    background: #8ad2dc;
-    color: #fff !important;
+    background: rgba(0,0,0,1);
+    color: #ec5629;
 }
 
 #orderByYear {
-    color: #8ad2dc;
+    color: #000;
 }
 
 #orderByName {
-    color: #8ad2dc;
+    color: #000;
 }
 
 #orderByCountry {
-    color: #8ad2dc;
+    color: #000;
 }
 
 #orderByDomain {
-    color: #8ad2dc;
+    color: #000;
 }
 
 .cta-container {
@@ -970,20 +1024,21 @@ select::-ms-expand {
     display: flex;
     flex-direction: row;
     align-items: center;
-    gap: 10px;
-    font-size: 15px;
+    gap: 4px;
+    font-size: 14px;
     line-height: 18px;
-    color: #ffffff;
-    background-color: #005fb9;
-    padding: 8px 12px;
+    color: #000;
+    background-color: rgba(240, 240, 240, 1);
+    padding: 8px 12px 8px 10px;
+    border: 0px solid #000;
     border-radius: 4px;
     transition: all 0.2s ease-in-out;
     cursor: pointer;
 }
 
 .btn-primary:hover, .btn-primary:active, .btn-primary:focus {
-    background-color: #0052a0;
-    color: #ffffff;
+    background-color: rgba(0, 0, 0, 1);
+    color: #ec5629;
 }
 
 .btn-secondary, .btn-secondary:visited {
@@ -993,18 +1048,18 @@ select::-ms-expand {
     align-items: center;
     gap: 10px;
     font-size: 15px;
-    color: #005fb9;
-    background-color: rgba(240, 240, 240, 0);
+    color: #000;
+    background-color: rgba(255, 255, 255, 0.2);
     padding: 8px 12px;
-    border: 1px solid #005fb9;
+    border: 1px solid rgba(0,0,0,0);
     border-radius: 4px;
     transition: all 0.2s ease-in-out;
     cursor: pointer;
 }
 
 .btn-secondary:hover, .btn-secondary:active, .btn-secondary:focus {
-    color: #004586;
-    border-color: #004586;
+    background-color: rgba(255, 255, 255, 0.3);
+    border-color: rgba(0,0,0,1);
 }
 
 .btn-icon {
@@ -1019,7 +1074,7 @@ select::-ms-expand {
     font-size: 18px;
     font-weight: 600;
     line-height: 1.55em;
-    color: #ffffff;
+    color: #000;
 }
 
 .filters-checkbox {
@@ -1034,26 +1089,28 @@ select::-ms-expand {
     height: 45px;
     display: flex;
     justify-content: center;
-    background-color: rgba(138, 210, 220, .25);
+    background-color: rgba(0, 0, 0, 0);
     padding: 10px;
+    border: 1px solid #000;
     border-radius: 25px;
     transition: all 0.3s ease-in-out;
 }
 
-#date label:hover {
-    background-color: rgba(138, 210, 220, 1);
-    color: #005fb9;
-}
+/*#date label:hover {
+    background-color: rgba(0, 0, 0, .3);
+    color: #000;
+}*/
 
 #date label:active,
 #date label:focus {
-    background-color: rgba(138, 210, 220, 1);
-    color: #005fb9;
+    background-color: rgba(0, 0, 0, 1);
+    color: #ec5629;
 }
 
-.checked+label {
-    background-color: rgba(138, 210, 220, 1) !important;
-    color: #005fb9;
+.checked+label,
+.checked+label:hover {
+    background-color: rgba(0, 0, 0, 1) !important;
+    color: #ec5629!important;
 }
 
 input[type="checkbox"] {
@@ -1079,7 +1136,7 @@ input[type="checkbox"]+label::before {
     height: 1.4em;
     width: 1.4em;
     background-color: white;
-    border: 1px solid rgb(166, 166, 166);
+    border: 1px solid rgba(0, 0, 0, 1);
     border-radius: 3px;
     margin-right: 10px;
     margin-left: 2px;
@@ -1092,7 +1149,7 @@ input[type="checkbox"]:checked+label::after {
     vertical-align: -20%;
     height: 0.6em;
     width: 0.9em;
-    border: #8ad2dc solid;
+    border: #000 solid;
     border-width: 3px 3px 0px 0px;
     top: 3px;
     left: 5px;
@@ -1102,7 +1159,7 @@ input[type="checkbox"]:checked+label::after {
 .sort-by {
     font-size: 13px !important;
     font-weight: 600;
-    color: #4c4c4c !important;
+    color: #000 !important;
     text-transform: uppercase;
     padding-right: 10px;
 }
@@ -1122,7 +1179,7 @@ input[type="checkbox"]:checked+label::after {
 
 .sort-element label {
     font-size: 14px;
-    color: #8ad2dc;
+    color: #000;
 }
 
 
@@ -1134,7 +1191,7 @@ input[type="checkbox"]:checked+label::after {
 
 .resetInput {
     opacity: 0;
-    background-image: url(https://www.fiware.org/fiware-summit/naples-2024/assets/icons/ico_clear.svg);
+    background-image: url(https://www.fiware.org/fiware-summit/rabat-2025/assets/images/ico/clear.svg);
     background-repeat: no-repeat;
     pointer-events: none;
     position: absolute;
@@ -1162,15 +1219,15 @@ input[type="checkbox"]:checked+label::after {
 }
 
 input[type="search"] {
-    background-color: rgba(138, 210, 220, 0);
+    background-color: rgba(0, 0, 0, 0);
     border-radius: 4px;
-    border: 1px solid #8ad2dc;
+    border: 1px solid #000;
     cursor: pointer;
     line-height: 1em;
     font-weight: 500;
     padding: 12px 35px 12px 40px !important;
     font-size: 15px;
-    background-image: url(https://www.fiware.org/fiware-summit/naples-2024/assets/icons/ico_search.svg);
+    background-image: url(https://www.fiware.org/fiware-summit/rabat-2025/assets/images/ico/search.svg);
     background-position: 4%;
     background-repeat: no-repeat;
     background-size: 24px 24px;
@@ -1178,13 +1235,13 @@ input[type="search"] {
 
 input[type="search"]:active,
 input[type="search"]:focus {
-    border: 1px solid #8ad2dc;
-    color: #ffffff;
+    border: 1px solid #000;
+    color: #000;
     box-shadow: none;
 }
 
 input[type="search"]::placeholder {
-    color: #8ad2dc;
+    color: #000;
 }
 
 /* Icons */
@@ -1196,7 +1253,7 @@ input[type="search"]::placeholder {
 .icon.cta {
     font-size: 48px;
     font-weight: 200;
-    color: #005fb9;
+    color: #ec5629;
 }
 
 .icon.cta.small {
@@ -1281,23 +1338,45 @@ input[type="search"]::placeholder {
 
     /* Modal */
 
+    .tingle-modal {
+        padding: 0;
+        display: flex;
+    }
+
     .tingle-modal__close {
         color: #000;
         font-weight: 400;
         line-height: 1em;
-    }
-
-    .tingle-modal__close {
-        top: 5vw;
-        right: 5vw;
         z-index: 99999;
-        background: #8ad2dc;
+        background: #fff;
         line-height: 0.9em;
         box-shadow: 0 0 50px 0 rgba(0, 0, 0, 1) !important;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 40px;
+        height: 40px;
+        top: 20px;
+        margin: 0 auto;
+        left: auto;
+        right: 20px;
+        border-radius: 25px;
+    }
+
+    .tingle-modal__closeLabel {
+        display: none;
+        font-family: 'Montserrat';
+        font-weight: 600;
+        padding-bottom: 4px;
     }
 
     .tingle-modal-box {
         width: 90%;
+    }
+
+    .tingle-modal__closeIcon {
+        margin: 0;
+        line-height: normal;
     }
 
     .tingle-modal-box__content {
@@ -1308,12 +1387,12 @@ input[type="search"]::placeholder {
         width: 100%;
     }
 
-    .tingle-modal img {
+    .tingle-modal img.headshot {
         display: none;
     }
 
     .details-modal {
-        display: block;
+        display: flex;
     }
 
     .social-modal p.domain {
@@ -1327,19 +1406,17 @@ input[type="search"]::placeholder {
     margin-bottom:0px; */
     }
 
-    .tags-modal {
-        display: none;
-        /* display: inline-block; */
+    /* .tags-modal {
+        display: inline-block;
         padding: 20px 0 0 0;
-    }
+    } */
 
     .tags-modal p.location {
-        display: none;
-        /*display: flex;
-    flex-direction: row;
-    margin-bottom: 0px;
-    margin-right: 20px;
-    padding-top: 0px; */
+        display: flex;
+        flex-direction: row;
+        margin-bottom: 0px;
+        margin-right: 20px;
+        padding-top: 0px;
     }
 
     .tags-modal .location:before {
@@ -1361,7 +1438,7 @@ input[type="search"]::placeholder {
     }
 
     .tingle-modal .bio-modal p {
-        max-height: 250px;
+        max-height: 235px;
         overflow: auto;
     }
 }
@@ -1741,7 +1818,7 @@ input[type="search"]::placeholder {
         display: flex;
         align-items: center;
         gap: 3px;
-        color: #ffffff;
+        color: #000;
         font-size: 16px;
         line-height: 1em;
     }
@@ -1755,11 +1832,11 @@ input[type="search"]::placeholder {
         align-items: center;
         gap: 10px;
         font-size: 16px;
-        color: #ffffff;
+        color: #000;
         margin: 0;
         padding: 0;
-        border-top: 0px solid #8ad2dc;
-        border-bottom: 0px solid #8ad2dc;
+        border-top: 0px solid #000;
+        border-bottom: 0px solid #000;
         float: right;
         user-select: none;
     }
