--- a/directories/agenda/style.css
+++ b/directories/agenda/style.css
@@ -188,6 +188,7 @@
     gap: 1em;
     align-items: center;
     text-decoration: underline;
+    text-decoration-thickness: 2px;
     text-decoration-color: rgba(0, 0, 0, 0);
 }
 
