--- a/directories/agenda/style.css
+++ b/directories/agenda/style.css
@@ -196,20 +196,40 @@
     text-decoration-color: #ec5629;
 }
 
+.panel-title.session.light-orange {
+    color: #ec5629;
+}
+
 .panel-title.light-blue {
     text-decoration-color: #005fb9;
+}
+
+.panel-title.session.light-blue {
+    color: #005fb9;
 }
 
 .panel-title.cyan {
     text-decoration-color: #0891b2;
 }
 
+.panel-title.session.cyan {
+    color: #0891b2;
+}
+
 .panel-title.light-green {
     text-decoration-color: #108763;
 }
 
+.panel-title.session.light-green {
+    color: #108763;
+}
+
 .panel-title.light-purple {
     text-decoration-color: #9e3162;
+}
+
+.panel-title.session.light-purple {
+    color: #9e3162;
 }
 
 .panel-title.detail {
