--- a/bin/templates/agenda/card.hbs
+++ b/bin/templates/agenda/card.hbs
@@ -10,7 +10,7 @@
           <div class="track {{trackColor}}">{{track}}</div>
           {{#if (ne prefix '')}}<span class="title-type {{trackColor}}">{{prefix}}</span>{{/if}}
         </div>
-        <p class="panel-title {{#if (ne session '')}}{{trackColor}} {{else}} session {{#if (ne session 'Organization')}}{{trackColor}}{{/if}}{{/if}}">{{title}}</p> 
+        <p class="panel-title {{#if (ne session '')}}{{trackColor}} {{else}} session {{#if (ne session "Organization")}}{{trackColor}}{{/if}}{{/if}}">{{title}}</p> 
         <span class="excerpt">{{session}}</span>
         <div class="panel-info">
           <div class="date-time">
