--- a/directories/agenda/style.css
+++ b/directories/agenda/style.css
@@ -182,6 +182,7 @@
     font-size: 18px;
     color: #000;
     line-height: 1.3em;
+    margin-top: 12px;
     margin-bottom: 5px;
     user-select: none;
     display: flex;
@@ -207,6 +208,7 @@
 
 .panel-title.session.light-grey {
     color: #000;
+    margin-top: 0;
 }
 
 .panel-title.session.light-orange {
@@ -477,7 +479,6 @@
 
 
 .chip-track {
-    margin-bottom: 12px;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -498,6 +499,10 @@
     font-size: 16px;
     padding: 8px 12px;
     border-radius: 20px;
+}
+
+.chip-track .track.light-grey {
+    display: none;
 }
 
 .track.light-grey {
