--- a/directories/agenda/style.css
+++ b/directories/agenda/style.css
@@ -1361,7 +1361,7 @@ input[type="search"]::placeholder {
 .icon.cta {
     font-size: 48px;
     font-weight: 200;
-    color: #ec5629;
+    color: #000;
 }
 
 .icon.cta.small {
