agenda css updates

--- a/directories/agenda/style.css
+++ b/directories/agenda/style.css
@@ -199,7 +199,7 @@
 
 .panel-title.light-orange {
     font-weight: 500;
-    text-decoration-color: #ec5629;
+    text-decoration-color: #fce9e3;
 }
 
 .panel-title.session {
@@ -235,7 +235,7 @@
 
 .panel-title.cyan {
     font-weight: 500;
-    text-decoration-color: #0891b2;
+    text-decoration-color: #ddf1f4;
 }
 
 .panel-title.session.cyan {
@@ -246,7 +246,7 @@
 
 .panel-title.light-green {
     font-weight: 500;
-    text-decoration-color: #108763;
+    text-decoration-color: #d0ede4;
 }
 
 .panel-title.session.light-green {
@@ -257,7 +257,7 @@
 
 .panel-title.light-purple {
     font-weight: 500;
-    text-decoration-color: #9e3162;
+    text-decoration-color: #f5eaef;
 }
 
 .panel-title.session.light-purple {
