--- a/bin/templates/agenda/social-media-image.hbs
+++ b/bin/templates/agenda/social-media-image.hbs
@@ -104,7 +104,7 @@
     <div class="panel-speakers">
       <div class="speakers">
         {{#each event.speakers}}
-        <div class="speaker">
+        <div class="speaker{{#if (includes ../moderators name)}} moderator{{/if}}">
           <div class="profile-picture">
             {{#if img}}
             <img decoding="async" alt="{{name}}" src="{{img}}">
@@ -126,7 +126,7 @@
     <div class="panel-speakers">
       <div class="speakers">
         {{#each event.speakers}}
-        <div class="speaker">
+        <div class="speaker{{#if (includes ../moderators name)}} moderator{{/if}}">
           <div class="grid-container">
             <div class="profile-picture-small">
               {{#if img}}
@@ -150,7 +150,7 @@
     <div class="panel-speakers">
       <div class="speakers">
         {{#each event.speakers}}
-        <div class="speaker">
+        <div class="speaker{{#if (includes ../moderators name)}} moderator{{/if}}">
           <div class="grid-container">
             <div class="profile-picture-small">
               {{#if img}}
@@ -172,7 +172,7 @@
     {{else}}
     {{#if (eq event.numSpeakers 4)}}
     <div class="panel-speakers">
-      <div class="speakers">
+      <div class="speakers{{#if (includes ../moderators name)}} moderator{{/if}}">
         {{#each event.speakers}}
         <div class="speaker">
           <div class="grid-container">
@@ -198,7 +198,7 @@
     <div class="panel-speakers more">
       <div class="speakers more">
         {{#each event.speakers}}
-        <div class="speaker">
+        <div class="speaker{{#if (includes ../moderators name)}} moderator{{/if}}">
           <div class="profile-picture-tiny">
             {{#if img}}
             <img src="{{img}}">
