agenda css updates

--- a/directories/agenda/style.css
+++ b/directories/agenda/style.css
@@ -361,15 +361,15 @@
     color: #005fb9;
 }
 
-.moderated-by.track.light-purple {
+.moderated-by.light-purple {
     color: #9e3162;
 }
 
-.moderated-by.track.light-green {
+.moderated-by.light-green {
     color: #108763;
 }
 
-.moderated-by.track.cyan {
+.moderated-by.cyan {
     color: #0891b2;
 }
 
