agenda css updates

--- a/directories/agenda/style.css
+++ b/directories/agenda/style.css
@@ -666,6 +666,10 @@
   background-color: #fdf6cf;
 }
 
+.topic-icon.light-purple {
+  background-color: #f5eaef;
+}
+
 .topic-icon.light-green {
   background-color: #d0ede4;
 }
