--- a/bin/templates/locations/map.hbs
+++ b/bin/templates/locations/map.hbs
@@ -5,7 +5,7 @@
 		{
 			"type":"Feature",
 			"properties":{
-				"type": "location",
+				"type": "{{type}}",
 				"name": "{{name}}",
 				"city": "{{city}}",
 				"html": [
