--- a/bin/templates/locations/map.hbs
+++ b/bin/templates/locations/map.hbs
@@ -9,7 +9,7 @@
 				"name": "{{name}}",
 				"city": "{{city}}",
 				"html": [
-					"<div>{{#if img}}<div class='gridElementLogoContainer'><picture><!--source srcset='{{webp img}}' type='image/webp'/--><img class='gridElementLogo' src='{{img}}' loading='lazy'/></picture></div>{{/if}}</div>",
+					"<div>{{#if img}}<div class='gridElementLogoContainer'><picture><source srcset='{{webp img}}' type='image/webp'/><img class='gridElementLogo' src='{{img}}' loading='lazy'/></picture></div>{{/if}}</div>",
 					"<div class='label-location' style='display: flex;flex-direction: row;'><h3>{{city}}</h3>{{#if country}}<img alt='{{country}}' class='flag' src='{{flagUrl}}' style='margin-left: auto;'/>{{/if}}</div>",
 					"<div class='ihub-name'>{{name}}</div>",
 					"<div class='ihub-type'>{{address}}</div>",
