locations map hbs href fix

--- a/bin/templates/locations/map.hbs
+++ b/bin/templates/locations/map.hbs
@@ -14,7 +14,7 @@
 					"<div class='ihub-name'>{{name}}</div>",
 					"<div class='ihub-type'>{{address}}</div>",
 					{{#if (gt stars 0)}}"<div class='ihub-type'><span class='star'>{{rating stars}}</span></div>",{{/if}}
-					"<div class='icons'>{{#if website}}<a class='cat-website' target='_blank' href='{{website}}' rel='noopener'><span class='icon website'></span>{{/if}}<div class='chip-domain'><ul class='chips'><li>{{type}}</li></ul></div></div>"
+					"<div class='icons'>{{#if website}}<a class='cat-website' target='_blank' href='{{website}}' rel='noopener'><span class='icon website'></span></a>{{/if}}<div class='chip-domain'><ul class='chips'><li>{{type}}</li></ul></div></div>"
 				]
 			},
 			"geometry":{
